# PasswordManager

./: pyproject.toml  requirements.txt
app/: config.py  main.py  password.py
output/keys/: test.key
output/passwords/: test.pw
